# fde-life

./: .gitignore  AGENTS.md  CLAUDE.md  QUICK_START.md  README.md  docker-compose.yml
agent/: .gitignore  Dockerfile  mcp_bridge.py  pyproject.toml  requirements.txt  server.py  xai_sdk.py
agent/tests/: test_server.py
backend/: .gitignore  Dockerfile  go.mod  go.sum  main.go
backend/api/: handler.go  handler_test.go
docs/: VERIFICATION_WALKTHROUGH.md
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  setupTests.ts
mcp-server/: Dockerfile  pyproject.toml  server.py
openapi/: openapi.yaml
proto/: chat.proto
